Fixed centering for svgs with text behind them

--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ h3 {
 svg {
     width: 1.5em;
     height: 1.5em;
-    margin-right: 0.2em;
+    margin-right: 0.5em;
 }
 
 #contact-me div {
